--- a/BE/package.json
+++ b/BE/package.json
@@ -2,10 +2,10 @@
   "name": "connectx",
   "version": "1.0.0",
   "description": "",
-  "main": "BE/server.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node BE/server.js",
-    "dev": "nodemon BE/server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
